--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "tslint": "5.11.0",
         "tslint-eslint-rules": "5.4.0",
         "typescript": "3.2.1",
-        "promise-retry": "1.1.1"
+        "promise-retry": "1.1.1",
+        "lodash": ">=4.17.13"
     },
     "scripts": {
         "build": "rimraf ui/dist && tsc",
